# Personal

CPP/BayesianSegmentation/: BayesianSegmentation.cxx  CMakeLists.txt  ImageGaussianClassifier.cxx  ImageParzen.cxx  IterativeBayesianSegmentation.cxx  MembershipFunctionEvaluation.cxx  PriorRegistration.cxx  RandomIterator.cxx  itkParzenMembershipFunction.h  itkParzenMembershipFunction.hxx  itkWeightedParzenMembershipFunction.h  itkWeightedParzenMembershipFunction.hxx
CPP/FeatureExtraction/: CMakeLists.txt  ConvolutionFeatures.cxx  PatchFeatures.cxx
CVIU_Segmentation/: BayesSegIter.m  blockBayesSegIter.m  blockHistogram.m  patchBayesSegIter.m  superspels_tune.m  test01.m
MATLAB/CVIU_Segmentation/: BayesEnergy.m  BayesLikelihood.m  BayesNormalEStep.m  BayesNormalEStep.m~  BayesNormalMStep.m  BayesNormalMStep.m~  BayesParzenMStep.m  BayesParzenMStep.m~  BayesSegIter.m  BayesSegIter.m~  BayesSegSpaceIter.m  LocalBayesSegIter.m  awate_2006.m  bayesScaleOptimization.m  blockHistogram.m  blockHistogram.m~  bw_skullstripping.m  energyVsSigma.m  log.txt  mrfRegularization.m  multivarBayes.m  patchBayesSegIter.m  patchBayesSegIter.m~  sigma_stability.m  simpleEx.cu  simpleEx.ptx  test01.m  test01.m~  test02.m  test02.m~  test03.m  transMatrix.m  weightedcov.m
MATLAB/CVIU_Segmentation/subject_01/: Tx.tfm
MATLAB/CVIU_Segmentation/templates/: priorList  priorList~
MATLAB/supervised_scale/: supervised_scale.m  supervised_scale.m~
